--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/logo.svg">
-   <!---<link rel="stylesheet" href="css/swiper-bundle.min.css">----> 
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">   
     <link rel="stylesheet" href="css/styles.css">    
@@ -36,11 +35,11 @@
                             </button>
                             <div class="collapse navbar-collapse" id="navbarResponsive">
                                 <ul class="navbar-nav ms-auto">
-                                    <li class="nav-item active"><a class="nav-link" href="#">Marketplace</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="#">Events</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="#">Policy & Regulation</a></li>
+                                    <li class="nav-item active"><a class="nav-link" href="#marketplace">Marketplace</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="#events">Events</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="#regulation">Policy & Regulation</a></li>
                                     <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="#">News</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="#news">News</a></li>
                                     <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
                                 </ul>
                             </div>
@@ -75,7 +74,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="events">
+                <section class="events" id="events">
                     <div class="events__box">
                         <div class="row justify-content-center text-center mx-auto" style="max-width: 1190px;">
                             <div class="col-sm-2">
@@ -125,7 +124,7 @@
                         </p>
                     </div>
                 </section>
-                <section class="news p-5" style="background-color: #96175D; background-image: url(/img/bg1.svg); background-repeat: no-repeat; background-position: right top;">
+                <section class="news p-3 p-lg-5" id="news" style="background-color: #96175D; background-image: url(/img/bg1.svg); background-repeat: no-repeat; background-position: right top;">
                     <div class="news__box p-3 position-relative" style="background-image: url(img/mark.png);background-repeat: no-repeat; background-position-x:8%; background-position-y: 5%;">
                         <h2 class="news__title title text-white mt-5 mx-auto pt-4" style="max-width: 980px;">LATEST NEWS</h2>
                         <div class="row row-cols-1 row-cols-lg-4 g-4 justify-content-center mb-5">
@@ -172,7 +171,7 @@
                         <div class="news__btn bg-white position-absolute bottom-0 btn" style="right: 15%;"><a href="#" style="color: #96175D;">View MORE</a></div>
                     </div>
                 </section>
-                <section class="marketplace p-5" style="background-color: #008DA8; background-image: url(/img/bg-marketplace.png); background-repeat: no-repeat;">
+                <section class="marketplace p-3 p-lg-5" style="background-color: #008DA8; background-image: url(/img/bg-marketplace.png); background-repeat: no-repeat;">
                     <div class="marketplace__box pt-5 pb-4" style="background-image: url(img/mark.png);background-repeat: no-repeat; background-position-x:8%; background-position-y: 3%;">
                         <h2 class="marketplace__title title text-white mx-auto pt-3" style="max-width: 980px;">MARKETPLACE</h2>
                         <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
@@ -207,7 +206,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="regulation p-5">
+                <section class="regulation p-3 p-lg-5" id="regulation">
                    <div class="regulation__box">
                        <h2 class="news__title title mt-5 mx-auto" style="max-width: 980px;">POLICY & REGULATION</h2> 
                    </div> 
@@ -249,7 +248,7 @@
                         </div>
                 </section>
                 <section class="contacts" style="background-image: url(img/contacts-img.png); background-size: cover;">
-                    <div class="contacts__box p-5 text-white">
+                    <div class="contacts__box p-3 p-lg-5 text-white">
                         <div class="contacts__content pb-4">
                             <h3>Sign Up to our Newsletter</h3>
                             <p>Receive the latest updates straight to your inbox!</p>
@@ -264,8 +263,7 @@
                                 </div>
                                 <button type="submit" class="btn bg-white" style="color: #96175D;">SIGN UP</button>
                             </form>
-                        </div>
-                        
+                        </div>                        
                     </div>
                 </section>
             </div>
@@ -301,9 +299,9 @@
         </footer>
     </div>
     
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> 
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
-</body>
+    </body>
 </html>
