--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                             <form>
                                 <div class="form-group">
                                     <label for="exampleInputEmail1"></label>
-                                    <input type="email" class="form-control w-50 opacity-75 p-2" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="your email address">
+                                    <input type="email" class="form-control w-75 w-lg-50 opacity-75 p-2" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="your email address">
                                 </div>
                                 <div class="form-check mt-4 mb-4">
                                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
