--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         <div class="news__btn bg-white position-absolute bottom-0 btn" style="right: 15%;"><a href="#" style="color: #96175D;">View MORE</a></div>
                     </div>
                 </section>
-                <section class="marketplace p-3 p-lg-5" style="background-color: #008DA8; background-image: url(/img/bg-marketplace.png); background-repeat: no-repeat;">
+                <section class="marketplace p-3 p-lg-5" id="marketplace" style="background-color: #008DA8; background-image: url(/img/bg-marketplace.png); background-repeat: no-repeat;">
                     <div class="marketplace__box pt-5 pb-4" style="background-image: url(img/mark.png);background-repeat: no-repeat; background-position-x:8%; background-position-y: 3%;">
                         <h2 class="marketplace__title title text-white mx-auto pt-3" style="max-width: 980px;">MARKETPLACE</h2>
                         <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
@@ -255,7 +255,7 @@
                             <form>
                                 <div class="form-group">
                                     <label for="exampleInputEmail1"></label>
-                                    <input type="email" class="form-control w-75 w-lg-50 opacity-75 p-2" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="your email address">
+                                    <input type="email" class="form-control w-75 opacity-75 p-2" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="your email address">
                                 </div>
                                 <div class="form-check mt-4 mb-4">
                                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
@@ -269,11 +269,11 @@
             </div>
         </main>
 
-        <footer class="footer">
-            <div class="container-fluid pt-4 pb-2" style="background-color: #3F4042; color: #fff;">
+        <footer class="footer pt-4"  style="background-color: #3F4042; color: #fff;">
+            <div class="p-2">
                 <div class="row align-items-center text-center">
-                    <div class="">
-                        <div class="footer-brand p-3"><a href="#"><img src="img/logo-footer.svg" alt="logo-footer"></a></div>                        
+                    <div class="p-1">
+                        <div class="footer-brand pt-3 pb-3"><a href="#"><img src="img/logo-footer.svg" alt="logo-footer"></a></div>                        
                         <div class="social-links p-4 d-flex justify-content-between mx-auto" style="max-width: 120px; width: 100%;">
                             <a href="#" class="social-link"><img src="img/face-icon.svg" alt="face-icon"></a>
                             <a href="#" class="social-link"><img src="img/twit-icon.svg" alt="twitter"></a>
@@ -294,7 +294,7 @@
                     </div>
                 </div>
 
-                <div class="copyright p-1 text-center">© 1999 Lorem Ipsum</div>
+                <div class="copyright text-center">© 1999 Lorem Ipsum</div>
             </div>
         </footer>
     </div>
