--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="img/logo.svg">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">   
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"/>
     <link rel="stylesheet" href="css/styles.css">    
     <title>Test</title>
 	<meta name="description" content="">	
@@ -54,7 +55,7 @@
                 <section class="hero">
                     <div class="content">
                         <div class="slider single-item">
-                            <div class="slider-item" style="background-image: url(/img/slide1.png);">
+                            <div class="slider-item position-relative" style="background-image: url(/img/slide1.png);">
                                 <div class="slider_content">
                                     <h2>Lorem SLIDE</h2>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -63,7 +64,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="slider-item" style="background-image: url(/img/slide2.png);">
+                            <div class="slider-item position-relative" style="background-image: url(/img/slide2.png);">
                                 <div class="slider_content">
                                     <h2>SLIDE 2</h2>
                                     <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
@@ -74,51 +75,51 @@
                         </div>
                     </div>
                 </section>
-                <section class="events" id="events">
+                <section class="events p-3 p-lg-5" id="events">
                     <div class="events__box">
                         <div class="row justify-content-center text-center mx-auto" style="max-width: 1190px;">
                             <div class="col-sm-2">
                                 <div class="card text-center events__card">
-                                    <div class="events__card-img">
-                                        <img src="img/Group 67.png" alt="">
+                                    <div class="events__card-img mx-auto mb-4">
+                                        <img class="img-fluid" src="img/Group 67.png" alt="img">
                                     </div>                                    
                                     <h5 class="card-title text-title">Using Biogas</h5>                                                                      
                                 </div>
                             </div>
                             <div class="col-sm-2">    
                                 <div class="card events__card">
-                                    <div class="events__card-img">
-                                        <img src="img/Group 66.png" alt="">
+                                    <div class="events__card-img mx-auto mb-4">
+                                        <img class="img-fluid" src="img/Group 66.png" alt="img">
                                     </div>                                    
                                     <h5 class="card-title text-title">Farming</h5>                                                                      
                                 </div>                                                                   
                             </div>
                             <div class="col-sm-2">    
                                 <div class="card events__card">
-                                    <div class="events__card-img">
-                                        <img src="img/Group 65.png" alt="">
+                                    <div class="events__card-img mx-auto mb-4">
+                                        <img class="img-fluid" src="img/Group 65.png" alt="img">
                                     </div>                                    
                                     <h5 class="card-title text-title">Waste Management</h5>                                                                      
                                 </div>                                                                   
                             </div>
                             <div class="col-sm-2">    
                                 <div class="card events__card">
-                                    <div class="events__card-img">
-                                        <img src="img/Group 64.png" alt="">
+                                    <div class="events__card-img mx-auto mb-4">
+                                        <img class="img-fluid" src="img/Group 64.png" alt="">
                                     </div>                                    
                                     <h5 class="card-title text-title">Using Biogas</h5>                                                                      
                                 </div>                                                                   
                             </div>
                             <div class="col-sm-2">    
                                 <div class="card events__card">
-                                    <div class="events__card-img">
-                                        <img src="img/Group 63.png" alt="">
+                                    <div class="events__card-img mx-auto mb-4">
+                                        <img class="img-fluid" src="img/Group 63.png" alt="img">
                                     </div>                                    
                                     <h5 class="card-title text-title">Resources</h5>                                                                      
                                 </div>                                                                   
                             </div>
                         </div>
-                        <p class="events__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        <p class="events__text text-center mx-auto mt-3 mt-lg-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
                             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                         </p>
@@ -132,12 +133,12 @@
                             <div class="card news__card h-100"  style="border-radius: 0 18px 0 18px;">                            
                                 <div class="card-body news__card-body">
                                     <h5 >Lorem ipsum dolor sit amet et dolore magna</h5>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                                    <p class="mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
                                         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip…
                                     </p>
                                 </div>
-                            <div class="card-footer news__card-footer">
-                                <a href="#" class="text-white">READ MORE</a>
+                            <div class="card-footer news__card-footer p-3">
+                                <a href="#" class="text-white text-uppercase">READ MORE</a>
                             </div>
                             </div>
                         </div>
@@ -145,12 +146,12 @@
                             <div class="card news__card h-100"  style="border-radius: 0 18px 0 18px;">                            
                                 <div class="card-body news__card-body">
                                     <h5 >Lorem ipsum dolor sit amet, consectetur adipiscing elit</h5>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+                                    <p class="mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
                                         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation…
                                     </p>
                                 </div>
-                            <div class="card-footer news__card-footer">
-                                <a href="#" class="text-white">READ MORE</a>
+                            <div class="card-footer news__card-footer p-3">
+                                <a href="#" class="text-white text-uppercase">Read more</a>
                             </div>
                             </div>
                         </div>
@@ -158,12 +159,12 @@
                             <div class="card news__card h-100"  style="border-radius: 0 18px 0 18px;">                            
                                 <div class="card-body news__card-body">
                                     <h5 >Consectetur adipiscing elit ut aliquam</h5>
-                                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat 
+                                    <p class="mt-4">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat 
                                         cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum…
                                     </p>
                                 </div>
-                                <div class="card-footer news__card-footer">
-                                    <a href="#" class="text-white">READ MORE</a>
+                                <div class="card-footer news__card-footer p-3">
+                                    <a href="#" class="text-white text-uppercase">READ MORE</a>
                                 </div>
                             </div>
                         </div>
@@ -175,12 +176,14 @@
                     <div class="marketplace__box pt-5 pb-4" style="background-image: url(img/mark.png);background-repeat: no-repeat; background-position-x:8%; background-position-y: 3%;">
                         <h2 class="marketplace__title title text-white mx-auto pt-3" style="max-width: 980px;">MARKETPLACE</h2>
                         <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
-                            <div class="col" style="max-width: 500px;width: 100%;">
+                            <article class="col" style="max-width: 500px;width: 100%;">
                                 <div class="card pb-3 position-relative" style="border-radius: 0 18px 0 18px;">
-                                    <img src="img/marketplace1.png" class="card-img-top" style="border-radius: 0 18px 0 0;" alt="...">
-                                    <img class="position-absolute top-50" src="img/lupa.svg" style="right: 20px;" alt="">
+                                    <img src="img/marketplace1.png" class="card-img-top img-fluid" style="border-radius: 0 18px 0 0;" alt="...">
+                                    <a data-fancybox="gallery" href="img/marketplace1.png">
+                                       <img  class="position-absolute top-50 plus" src="img/lupa.svg" style="right: 20px;" alt=""> 
+                                    </a>                            
                                     <div class="card-body marketplace__card-body">
-                                        <h5 class="card-title">Industry Directory</h5>
+                                        <h5 class="card-title mb-3">Industry Directory</h5>
                                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis nulla eget mauris lobortis facilisis ac eget lacus. Sed varius…                                        
                                         </p>
                                     </div>
@@ -188,13 +191,15 @@
                                         <a href="#" class="btn text-white m-3" style="background-color: #71CEF5;">FIND OUT MORE</a>
                                     </div>                                    
                                 </div>
-                            </div>                           
-                            <div class="col" style="max-width: 500px;width: 100%;">
+                            </article>                           
+                            <article class="col" style="max-width: 500px;width: 100%;">
                                 <div class="card marketplace__card pb-3 position-relative" style="border-radius: 0 18px 0 18px;">
-                                <img src="img/marketplace2.png" class="card-img-top" style="border-radius: 0 18px 0 0;" alt="...">
-                                <img class="position-absolute top-50" src="img/lupa.svg" style="right: 20px;" alt="">
+                                <a data-fancybox="gallery" href="#">
+                                    <img src="img/marketplace2.png" class="card-img-top img-fluid" style="border-radius: 0 18px 0 0;" alt="...">
+                                </a>
+                                <img class="position-absolute top-50 plus" src="img/lupa.svg" style="right: 20px;" alt="">
                                 <div class="card-body marketplace__card-body">
-                                    <h5 class="card-title">Notice Board</h5>
+                                    <h5 class="card-title mb-3">Notice Board</h5>
                                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                                         Aenean quis nulla eget mauris lobortis facilisis ac eget lacus. Sed varius…</p>
                                 </div>
@@ -202,7 +207,7 @@
                                         <a href="#" class="btn text-white m-3" style="background-color: #71CEF5;">FIND OUT MORE</a>
                                     </div>
                                 </div>
-                            </div>
+                            </article>
                         </div>
                     </div>
                 </section>
@@ -216,7 +221,7 @@
                                     <div class="regulation__card-img">
                                         <img src="img/policy1.png" alt="">
                                     </div>                                    
-                                    <h5 class="card-title text-title">Industry Strategy and Lobbying Objectives</h5>    
+                                    <h5 class="card-title text-title mt-4 mb-3">Industry Strategy and Lobbying Objectives</h5>    
                                     <p class="mx-auto" style="max-width: 338px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse egestas bibendum magna id lobortis. Pellentesque a suscipit leo.
                                          Nullam et pretium diam. Aenean vel tristique dui…
                                     </p>                                                                  
@@ -227,7 +232,7 @@
                                     <div class="regulation__card-img">
                                         <img src="img/policy2.png" alt="">
                                     </div>                                    
-                                    <h5 class="card-title text-title">Policy and Market Reports</h5>   
+                                    <h5 class="card-title text-title mt-4 mb-3">Policy and Market Reports</h5>   
                                     <p class="mx-auto" style="max-width: 338px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse egestas bibendum magna id lobortis. 
                                         Pellentesque a suscipit leo. Nullam et pretium diam. Aenean vel tristique dui…
                                     </p>                                                                   
@@ -238,7 +243,7 @@
                                     <div class="regulation__card-img">
                                         <img src="img/policy3.png" alt="">
                                     </div>                                    
-                                    <h5 class="card-title text-title">Regulators</h5> 
+                                    <h5 class="card-title text-title mt-4 mb-3">Regulators</h5> 
                                     <p class="mx-auto" style="max-width: 338px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse egestas bibendum magna id lobortis. 
                                         Pellentesque a suscipit leo. Nullam et pretium diam. Aenean vel tristique dui…
                                     </p>                                                                     
@@ -249,7 +254,7 @@
                 </section>
                 <section class="contacts" style="background-image: url(img/contacts-img.png); background-size: cover;">
                     <div class="contacts__box p-3 p-lg-5 text-white">
-                        <div class="contacts__content pb-4">
+                        <div class="contacts__content pb-4 mx-auto">
                             <h3>Sign Up to our Newsletter</h3>
                             <p>Receive the latest updates straight to your inbox!</p>
                             <form>
@@ -302,6 +307,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+   <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
     <script src="js/script.js"></script>
     </body>
 </html>
